Revert "trying to fix the menu on mobile"
This reverts commit 5447c4677e6146e03e57dc9b08464a2e95ddb7b5.

--- a/matentus/client/app/styles/custom/index.css
+++ b/matentus/client/app/styles/custom/index.css
@@ -9,23 +9,12 @@ body{
     font-weight: 100;
     padding: 0px;
 }
-
 #beta-stamp{
     position: absolute;
-    margin-top: 6%;
-    top: 6%;
-    left: 5.5%;
+    margin-top: 8.5%;
+    left: 5%;
     transform: scale(6.5) rotate(-25deg);
     max-width: 100px;
-}
-@media screen and (min-width: 568px){
-    #beta-stamp{
-        position: absolute;
-        margin-top: 5.5%;
-        top: 7%;
-        left: 4.5%;
-        transform: scale(2) rotate(-25deg);
-    }
 }
 @media screen and (min-width: 768px){
     #beta-stamp{
@@ -52,16 +41,6 @@ body{
         top: 5%;
         left: 6.2%;
         transform: scale(1.3) rotate(-25deg);
-    }
-}
-@media screen and (min-width: 300px) and (max-width: 400px){
-    #beta-stamp{
-        position: absolute;
-        margin-top: 3%;
-        top: 4%;
-        left: 0%;
-        transform: scale(1) rotate(-25deg);
-        width: 70px;
     }
 }
 /*
